--- a/main.css
+++ b/main.css
@@ -11,6 +11,8 @@ body {
   justify-content: center;
   align-items: center;
   font-family: "Stick", sans-serif;
+  text-align: center;
+  font-size: 5vmin;
 }
 
 header {
@@ -27,10 +29,16 @@ header {
 
 #board > div {
   border: 1vmin solid grey;
-  background-color: red;
 }
 
 #board > div:hover {
+}
+
+div {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 15vmin;
 }
 
 button {
